--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>Game 1 - Fun Events</title>
+<title>Galatta Fest '22</title>
 <style>
 
 .row {
@@ -61,64 +61,64 @@ body {
 </head>
 <body>
 <center>
-<h1>Game 1 - Fun Events</h1>
-<!--h2>Chapter 1 - Assemble<h2-->
-<h3>SEDS KCT 2020-21</h3>
+<h1>Buzzer Round</h1>
+<!--h2>Chapter 1 - Assemble<h2>
+<h3>SEDS KCT 2020-21</h3-->
 
 <div class="row">
 <div class="flip-box">
   <div class="flip-box-inner">
     <div class="flip-box-front">
-    <h2><br>"நிலம் உனக்கு அதிகாரம்! ஆனா அதுதான் எங்களுக்கு வாழ்கை! "</br></h2>
+    <h2><br><br>One</br></br></h2>
     <!--img src=".jpg" style="width:300px;height:200px"-->
     </div>
     <div class="flip-box-back">
-      <!--img src="1.jpg" style="width:200px;height:200px"-->
-      <h1>********</h1>
+      <img src="1.png" style="width:300px;height:200px">
+      <!--h1>********</h1>
       <h1>SET 3</h1>
-      <h1>********</h1>
+      <h1>********</h1-->
     </div>
   </div>
 </div>
 <div class="flip-box">
   <div class="flip-box-inner">
     <div class="flip-box-front">
-      <h2><br></br>"No means No"</br></br></h2>
+      <h2><br></br>Two</br></br></h2>
       <!--img src="2.jpg" style="width:300px;height:200px"-->
     </div>
     <div class="flip-box-back">
-      <!--img src="1.jpg" style="width:200px;height:200px"-->
-      <h1>********</h1>
-      <h1>SET 7</h1>
-      <h1>********</h1>
+      <img src="2.jpeg" style="width:200px;height:200px">
+      <!--h1>********</h1>
+      <h1>SET 3</h1>
+      <h1>********</h1-->
     </div>
   </div>
 </div>
 <div class="flip-box">
   <div class="flip-box-inner">
     <div class="flip-box-front">
-      <h2><br><br>"ஏர் ஓட்றவனும் ஏரோபிலேன் ல  போகணும் "</br></br></h2>
+      <h2><br><br>Three</br></br></h2>
       <!--img src="1.jpg" style="width:200px;height:200px"-->
     </div>
     <div class="flip-box-back">
-      <!--img src="1.jpg" style="width:200px;height:200px"-->
-      <h1>********</h1>
-      <h1>SET 5</h1>
-      <h1>********</h1>
+      <img src="3.jpeg" style="width:300px;height:200px">
+      <!--h1>********</h1>
+      <h1>SET 3</h1>
+      <h1>********</h1-->
     </div>
   </div>
 </div>
 <div class="flip-box">
   <div class="flip-box-inner">
     <div class="flip-box-front">
-      <h2><br></br>"தூதன் வருவான் ! மாரி பொழியும் !"</br></br></h2>
+      <h2><br></br>Four</br></br></h2>
       <!--img src="1.jpg" style="width:300px;height:200px"-->
     </div>
     <div class="flip-box-back">
-      <!--img src="1.jpg" style="width:200px;height:200px"-->
-      <h1>********</h1>
-      <h1>SET 2</h1>
-      <h1>********</h1>
+      <img src="4.jpeg" style="width:300px;height:200px">
+      <!--h1>********</h1>
+      <h1>SET 3</h1>
+      <h1>********</h1-->
     </div>
   </div>
 </div>
@@ -136,56 +136,56 @@ body {
 <div class="flip-box">
   <div class="flip-box-inner">
     <div class="flip-box-front">
-    <h2><br></br>"...மன்னிப்பு கேக்க தெரிஞ்சவன் அதவிட பெரிய மனுஷன்"</br></br></h2>
+    <h2><br></br>Five</br></br></h2>
     <!--img src=".jpg" style="width:300px;height:200px"-->
     </div>
     <div class="flip-box-back">
-      <!--img src="1.jpg" style="width:200px;height:200px"-->
-      <h1>********</h1>
-      <h1>SET 1</h1>
-      <h1>********</h1>
+      <img src="5.jpeg" style="width:300px;height:200px">
+      <!--h1>********</h1>
+      <h1>SET 3</h1>
+      <h1>********</h1-->
     </div>
   </div>
 </div>
 <div class="flip-box">
   <div class="flip-box-inner">
     <div class="flip-box-front">
-      <h2><br></br>"இந்த கதைல ராமனும் நான் தான் ராவணனும் நான் தான் !"</br></br></h2>
+      <h2><br></br>Six</br></br></h2>
       <!--img src="2.jpg" style="width:300px;height:200px"-->
     </div>
     <div class="flip-box-back">
-      <!--img src="1.jpg" style="width:200px;height:200px"-->
-      <h1>********</h1>
-      <h1>SET 6</h1>
-      <h1>********</h1>
+      <img src="6.jpeg" style="width:300px;height:200px">
+      <!--h1>********</h1>
+      <h1>SET 3</h1>
+      <h1>********</h1-->
     </div>
   </div>
 </div>
 <div class="flip-box">
   <div class="flip-box-inner">
     <div class="flip-box-front">
-      <h2><br>"நீ பற்ற வைத்த நெருப்பொன்று, பற்றி எரிய உனைக்கேட்க்கும்"</br></h2>
+      <h2><br><br>Seven</br></br></h2>
       <!--img src="1.jpg" style="width:200px;height:200px"-->
     </div>
     <div class="flip-box-back">
-      <!--img src="1.jpg" style="width:200px;height:200px"-->
-      <h1>********</h1>
-      <h1>SET 4</h1>
-      <h1>********</h1>
+      <img src="7.jpeg" style="width:300px;height:200px">
+      <!--h1>********</h1>
+      <h1>SET 3</h1>
+      <h1>********</h1-->
     </div>
   </div>
 </div>
 <div class="flip-box">
   <div class="flip-box-inner">
     <div class="flip-box-front">
-      <h2><br></br>"***BLANK***"</br></br></h2>
+      <h2><br></br>Eight</br></br></h2>
       <!--img src="1.jpg" style="width:300px;height:200px"-->
     </div>
     <div class="flip-box-back">
-      <!--img src="1.jpg" style="width:200px;height:200px"-->
-      <h1>********</h1>
-      <h1>BLANK</h1>
-      <h1>********</h1>
+      <img src="8.jpeg" style="width:300px;height:200px">
+      <!--h1>********</h1>
+      <h1>SET 3</h1>
+      <h1>********</h1-->
     </div>
   </div>
 </div>
@@ -199,6 +199,75 @@ body {
   <a>&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;</a>
   <input type="text"  value=""></br>
 </form>
+
+<div class="row">
+<div class="flip-box">
+  <div class="flip-box-inner">
+    <div class="flip-box-front">
+    <h2><br></br>Nine</br></br></h2>
+    <!--img src=".jpg" style="width:300px;height:200px"-->
+    </div>
+    <div class="flip-box-back">
+      <img src="9.jpeg" style="width:300px;height:200px">
+      <!--h1>********</h1>
+      <h1>SET 3</h1>
+      <h1>********</h1-->
+    </div>
+  </div>
+</div>
+<div class="flip-box">
+  <div class="flip-box-inner">
+    <div class="flip-box-front">
+      <h2><br></br>Ten</br></br></h2>
+      <!--img src="2.jpg" style="width:300px;height:200px"-->
+    </div>
+    <div class="flip-box-back">
+      <img src="10.jpeg" style="width:200px;height:200px">
+      <!--h1>********</h1>
+      <h1>SET 3</h1>
+      <h1>********</h1-->
+    </div>
+  </div>
+</div>
+<div class="flip-box">
+  <div class="flip-box-inner">
+    <div class="flip-box-front">
+      <h2><br><br>Eleven</br></br></h2>
+      <!--img src="1.jpg" style="width:200px;height:200px"-->
+    </div>
+    <div class="flip-box-back">
+      <img src="11.jpeg" style="width:300px;height:200px">
+      <!--h1>********</h1>
+      <h1>SET 3</h1>
+      <h1>********</h1-->
+    </div>
+  </div>
+</div>
+<div class="flip-box">
+  <div class="flip-box-inner">
+    <div class="flip-box-front">
+      <h2><br></br>Twelve</br></br></h2>
+      <!--img src="1.jpg" style="width:300px;height:200px"-->
+    </div>
+    <div class="flip-box-back">
+      <img src="12.jpeg" style="width:300px;height:200px">
+      <!--h1>********</h1>
+      <h1>SET 3</h1>
+      <h1>********</h1-->
+    </div>
+  </div>
+</div>
+</div>
+<form>
+  <br><input type="text"  value="">
+  <a>&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;</a>
+  <input type="text"  value="">
+  <a>&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;</a>
+  <input type="text"  value="">
+  <a>&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;</a>
+  <input type="text"  value=""></br>
+</form>
+<h1>Copyrights © Sheik Imran - EVM Co Lead - SEDS KCT '22</h1>
 </center>
 </body>
 </html>
